[gd_scene load_steps=30 format=2]

[ext_resource path="res://src/Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/art/player/player_sprites.png" type="Texture" id=2]
[ext_resource path="res://assets/audio/sfx/jump.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/sfx/shoot.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/art/ui/touch_button_left.png" type="Texture" id=5]
[ext_resource path="res://assets/art/ui/touch_button_right.png" type="Texture" id=6]
[ext_resource path="res://assets/art/ui/touch_button_jump.png" type="Texture" id=7]
[ext_resource path="res://assets/art/ui/touch_button_fire.png" type="Texture" id=8]
[ext_resource path="res://src/Actors/Gun.gd" type="Script" id=9]
[ext_resource path="res://assets/art/player/health.png" type="Texture" id=10]
[ext_resource path="res://assets/art/player/hp_3.png" type="Texture" id=11]
[ext_resource path="res://src/Actors/Effects/Hit.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/Actors/Effects/Explosion.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/Actors/Effects/Explode.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/art/enemy/explosion.png" type="Texture" id=15]

[sub_resource type="Animation" id=1]
resource_name = "crouch"
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=12]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("Explode:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Explosion:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "falling"
length = 0.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}

[sub_resource type="Animation" id=3]
resource_name = "falling_weapon"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=13]
resource_name = "hit"
tracks/0/type = "value"
tracks/0/path = NodePath("Hit:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=4]
length = 2.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=5]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=6]
length = 0.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[sub_resource type="Animation" id=7]
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=8]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=9]
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=10]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 5 ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 7.5, 7.5 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 7.5, 10 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 28
script = ExtResource( 1 )

[node name="ShootAnimation" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
one_shot = true

[node name="PlatformDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 8

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 2 )
hframes = 12
vframes = 4
frame = 16

[node name="Gun" type="Position2D" parent="Sprite"]
position = Vector2( 14, 1 )
script = ExtResource( 9 )

[node name="Shoot" type="AudioStreamPlayer2D" parent="Sprite/Gun"]
position = Vector2( -30.6589, -6.13176 )
stream = ExtResource( 4 )

[node name="Cooldown" type="Timer" parent="Sprite/Gun"]
process_mode = 0
wait_time = 0.3
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.6
anims/crouch = SubResource( 1 )
anims/death = SubResource( 12 )
anims/falling = SubResource( 2 )
anims/falling_weapon = SubResource( 3 )
anims/hit = SubResource( 13 )
anims/idle = SubResource( 4 )
anims/idle_weapon = SubResource( 5 )
anims/jumping = SubResource( 6 )
anims/jumping_weapon = SubResource( 7 )
anims/run = SubResource( 8 )
anims/run_weapon = SubResource( 9 )
anims/standing_weapon_ready = SubResource( 10 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 0, -28 )
current = true
zoom = Vector2( 0.5, 0.5 )
process_mode = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -7.5 )
shape = SubResource( 11 )

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 0

[node name="Left" type="TouchScreenButton" parent="UI"]
visible = false
position = Vector2( 27.7593, 360.87 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 5 )
passby_press = true
action = "move_left"
visibility_mode = 1

[node name="Right" type="TouchScreenButton" parent="UI"]
visible = false
position = Vector2( 121.542, 361.415 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 6 )
passby_press = true
action = "move_right"
visibility_mode = 1

[node name="Jump" type="TouchScreenButton" parent="UI"]
visible = false
position = Vector2( 666.224, 359.02 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 7 )
action = "jump"
visibility_mode = 1

[node name="Fire" type="TouchScreenButton" parent="UI"]
visible = false
position = Vector2( 668.073, 262.788 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 8 )
action = "shoot"
visibility_mode = 1

[node name="TextureRect" type="TextureRect" parent="UI"]
visible = false
margin_right = 64.0
margin_bottom = 40.0
texture = ExtResource( 11 )

[node name="HpSprite" type="Sprite" parent="UI"]
position = Vector2( 26, 31 )
scale = Vector2( 3, 3 )
texture = ExtResource( 10 )
hframes = 4
frame = 3

[node name="Explosion" parent="." instance=ExtResource( 13 )]
texture = ExtResource( 15 )

[node name="Explode" parent="." instance=ExtResource( 14 )]

[node name="Hit" parent="." instance=ExtResource( 12 )]
position = Vector2( 0, -7 )

[node name="PlatformTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="DamageDetector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageDetector"]
position = Vector2( -1, -8 )
scale = Vector2( 0.8, 0.8 )
shape = SubResource( 14 )

[connection signal="timeout" from="PlatformTimer" to="." method="_on_PlatformTimer_timeout"]
[connection signal="body_entered" from="DamageDetector" to="." method="_on_DamageDetector_body_entered"]
